...
) {
    val experience = LocalCarePackExperience.current

    Scaffold(
        modifier = Modifier
                .fillMaxSize().testTag(
                    "calendar_screen",
                ),
    ) { contentPadding ->
        Column(
            modifier = Modifier
                    .fillMaxSize().padding(
                        contentPadding,
...
